# RecallMap

./: .env.example  .gitignore  CLAUDE.md  COMMANDS.md
apps/: CLAUDE.md
backend/: CLAUDE.md  pyproject.toml
backend/api/: CLAUDE.md  main.py  store.py
backend/api/routes/: auth.py  ingest.py  map.py  quiz.py  schedule.py  session.py  topics.py
backend/db/: connection.py  models.py
backend/engine/: CLAUDE.md  __init__.py  blind_spot.py  comprehension_engine.py  delayed_confirmation.py  dialogue.py  gemma_client.py  intent_layer.py  knowledge_base.py  learning_map.py  quiz_engine.py  retention_engine.py  scheduler.py  session_trigger.py  topic_classifier.py
backend/ingest/: CLAUDE.md  __init__.py  base.py  chatgpt_parser.py  chatgpt_share_parser.py  document_parser.py  gemini_parser.py  image_parser.py  notion_parser.py  pdf_parser.py
backend/integrations/: CLAUDE.md  auth_manager.py  calendar_api.py  notion_api.py
backend/onboarding/: CLAUDE.md
backend/tests/: CLAUDE.md
backend/tests/engine/: test_gemma_client.py
backend/tests/ingest/: test_chatgpt_parser.py  test_pdf_parser.py
notes/: 2026-04-19_架構重訂與設計決策.md  2026-04-21_前端需求文件.md  P0-1｜SQLite 持久化 Session 33beb8f8720281da96dbd35cfe364f1f.md  P0-2｜學習地圖 Force Refresh 33beb8f872028108b676d9bf52578f19.md  P0-3｜Expo 前端腳手架 33beb8f872028181bc7ddc63fba294f0.md  P0-4｜packages shared 型別與 API Client 33beb8f87202812fb9eafa6697342bf2.md  P0-5｜前端 — 上傳介面 33beb8f872028157be34e1c540f7ba7d.md  P0-6｜前端 — 學習地圖視覺化 33beb8f87202812d86c2da2e192a6494.md  RecallMap — Gemma 4 Good Hackathon 338eb8f8720281569955d12f5cc6ef76.md  (+5 more)
(+18 files in other folders)
